--- a/Frontend/web-pages/ContactoLogado.html
+++ b/Frontend/web-pages/ContactoLogado.html
@@ -19,11 +19,11 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css" />
 
-    <link href="../css/login.css" rel="stylesheet" />
+    <link href="../css/contactoLogado.css" rel="stylesheet" />
   </head>
 
   <body>
-    <header>
+        <header>
       <nav id="navbar-color" class="navbar navbar-expand-xl navbar-dark">
         <a class="navbar-brand ml-3 mb-5 mb-lg-0" href="#"><img src="../img/HT_Logo3.png" width="125" alt="" /></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
@@ -33,10 +33,10 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul id="navbar-link" class="navbar-nav ml-auto font-weight-bold">
             <li class="nav-item">
-              <a class="nav-link mr-5 pr-5" href="../index.html">Inicio</a>
+              <a class="nav-link mr-5 pr-5" href="../web-pages/usuario.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link mr-5" href="#">Programas</a>
+              <a class="nav-link mr-5" href="../web-pages/buscar-rutina-usuario.html">Programas</a>
             </li>
             <li class="nav-item">
               <a class="nav-link mr-5" href="#">Acerca de nosotros</a>
@@ -48,10 +48,11 @@
               <a class="nav-link mr-5 pr-5" href="#">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link mr-3" href="#">Iniciar Sesion</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../web-pages/registro.html">Regístrate</a>
+                <a class="nav-link" href="#">Datos</a>
+               <ul>
+                <li><a href="../web-pages/ModificarUsuario.html">Modificar datos</a></li>
+                <li><a href="../web-pages/BajaUsuario.html">Baja</a></li>
+               </ul> 
             </li>
           </ul>
         </div>
@@ -60,44 +61,52 @@
 
     <main>
 
-      <section id="iniciarSesion" class="container">
-        <div class="limit">
-          <div class="login-container">
-            <div class="bb-login">
-              <form class="bb-form validate-form" id="form"> <span class="bb-form-title p-b-26 mb-5"> Inicio de sesión </span><span class="bb-form-title p-b-4">
-                  <i class="mdi mdi-symfony"></i> </span>
-                <div class="form-group col-md-12 validate-input" data-validate="Valid email is: a@b.c> <label for=" inputName">Email</label> 
-                  <input type="email" class="form-control" id="email" name="email" placeholder="Inicie session con e-mail" required=""> 
-                  <p class="formulari__input-error">Ha de ser una combinació de lletres o nombres + l'arroba + més text en llebres o nombres + un punt + més text.</p>
+      <section id="crear-contacto" class="container">
+          <div class="card signup_v4 mb-30">
+            <div class="card-body">
+                <ul class="nav nav-tabs" id="myTab" role="tablist">
+                    <li class="nav-item" role="presentation"> <a class="nav-link active" id="login-tab" data-toggle="tab" href="#login" role="tab"
+                    aria-controls="login" aria-selected="true" style="text-transform: uppercase;">Selecciona un contacto</a> </li>
+                </ul>
+                <div class="tab-content" id="myTabContent">
+                    <div class="tab-pane fade show active" id="login" role="tabpanel" aria-labelledby="login-tab">
+                        <h4 class="text-center mt-4 mb-4" style="text-transform: uppercase;">Selecciona un contacto</h4>
+
+                        <form>
+                            <div class="row ">
+                              <div class="form-group col-md-12">
+                                <label for="">Tipo de contacto</label>
+                                <select class="form-control" id="exampleFormControlSelect1" required>
+                                  <option>Suggerimiento</option>
+                                  <option>Duda</option>
+                                  <option>Queja</option>
+                                  <option>Bug</option>
+                                </select>
+                              </div>
+
+                              <div class="form-group col-md-12"> 
+                                  <label for="inputName">Título</label> <input type="text" class="form-control" id="inputEmail4" placeholder="Nombre del título" required=""> 
+                              </div>
+
+                              <div class="form-group col-md-12"> 
+                                  <label for="inputName">Descripción</label> 
+                                  <textarea class="form-control col-12" id="exampleFormControlTextarea1" rows="3" placeholder="Escribe aquí la descripción" required></textarea>
+                              </div>
+
+
+
+                            </div>
+                            <hr class="mt-3 mb-4">
+                            <div class="d-flex flex-wrap justify-content-between align-items-center">
+                                <div class="custom-checkbox d-block">  </div>
+                                <button class="btn btn-dark mt-3 mt-sm-0" type="submit">Enviar</button>
+                            </div>
+                        </form>
+
+                  </div>
                 </div>
-                <div class="form-group col-md-12"> <label for="inputName">Contraseña</label><span class="btn-show-pass"> <i
-                      class="bi bi-eye-fill"></i>
-                  </span> <input type="password" class="form-control" id="password" name="password" placeholder="Escriba su Contraseña" required
-                    pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
-                    title="Ha de tener uno o más números, una letra mayúscula, una letra minúscula y 8 o más caracteres."> 
-                    <p class="formulari__input-error">Contrasenya incorrecta.</p>
-                </div>
-                <div class="login-container-form-btn">
-                  <button class="btn btn-dark mt-5"> Iniciar sesión </button>
-                </div>
-                <div class="text-center p-t-115">
-                <div class="text-center p-t-115"> 
-                    <span class="mr-2">Olvidado Contraseña?</span> 
-                    <a href="../web-pages/RecordarContraseña.html">Recordar Contraseña</a> 
-                </div>
-              <div class="text-center p-t-115"> 
-                  <span class="mr-2"> Aún no tiene registro realizado? </span> 
-                  <a href="../web-pages/registro.html">Regístrate </a> 
-              </div>
-                <p class="formulari__mensaje-exito" id="formulari__mensaje-exito">formulari enviado exitosamente!</p>
-                <div class="formulari__mensaje" id="formulari__mensaje">
-                    <p><b>Error:</b> Por favor rellena el formulari correctamente. </p>
-                </div>
-              </form>
             </div>
           </div>
-        </div>
-        </div>
       </section>
 
     </main>
@@ -164,12 +173,6 @@
     <!-- Custom scripts -->
     <script src="../js/login.js"></script>
 
-    <!-- Carregar CDN axios -->
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> 
-    <!-- Script de validació login.html -->
-     <script src="../../Front_Back/validar_login.js"></script>
-
   </body>
 
 </html>
-
