--- a/Frontend/web-pages/ModificarUsuario.html
+++ b/Frontend/web-pages/ModificarUsuario.html
@@ -19,6 +19,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css" />
 
+    <link href="../css/ModificarUsuario.css" rel="stylesheet" />
     <link href="../css/login.css" rel="stylesheet" />
   </head>
 
@@ -33,10 +34,10 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul id="navbar-link" class="navbar-nav ml-auto font-weight-bold">
             <li class="nav-item">
-              <a class="nav-link mr-5 pr-5" href="../index.html">Inicio</a>
+              <a class="nav-link mr-5 pr-5" href="../web-pages/usuario.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link mr-5" href="#">Programas</a>
+              <a class="nav-link mr-5" href="../web-pages/buscar-rutina-usuario.html">Programas</a>
             </li>
             <li class="nav-item">
               <a class="nav-link mr-5" href="#">Acerca de nosotros</a>
@@ -45,13 +46,14 @@
               <a class="nav-link" href="#">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link mr-5 pr-5" href="#">Contacto</a>
+              <a class="nav-link mr-5 pr-5" href="../web-pages/ContactoLogado.html">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link mr-3" href="#">Iniciar Sesion</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../web-pages/registro.html">Regístrate</a>
+                <a class="nav-link" href="#">Datos</a>
+               <ul>
+                <li><a href="#">Modificar datos</a></li>
+                <li><a href="../web-pages/BajaUsuario.html">Baja</a></li>
+               </ul> 
             </li>
           </ul>
         </div>
@@ -60,43 +62,70 @@
 
     <main>
 
-      <section id="iniciarSesion" class="container">
-        <div class="limit">
-          <div class="login-container">
-            <div class="bb-login">
-              <form class="bb-form validate-form" id="form"> <span class="bb-form-title p-b-26 mb-5"> Inicio de sesión </span><span class="bb-form-title p-b-4">
-                  <i class="mdi mdi-symfony"></i> </span>
-                <div class="form-group col-md-12 validate-input" data-validate="Valid email is: a@b.c> <label for=" inputName">Email</label> 
-                  <input type="email" class="form-control" id="email" name="email" placeholder="Inicie session con e-mail" required=""> 
-                  <p class="formulari__input-error">Ha de ser una combinació de lletres o nombres + l'arroba + més text en llebres o nombres + un punt + més text.</p>
-                </div>
-                <div class="form-group col-md-12"> <label for="inputName">Contraseña</label><span class="btn-show-pass"> <i
-                      class="bi bi-eye-fill"></i>
-                  </span> <input type="password" class="form-control" id="password" name="password" placeholder="Escriba su Contraseña" required
-                    pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
-                    title="Ha de tener uno o más números, una letra mayúscula, una letra minúscula y 8 o más caracteres."> 
-                    <p class="formulari__input-error">Contrasenya incorrecta.</p>
-                </div>
-                <div class="login-container-form-btn">
-                  <button class="btn btn-dark mt-5"> Iniciar sesión </button>
-                </div>
-                <div class="text-center p-t-115">
-                <div class="text-center p-t-115"> 
-                    <span class="mr-2">Olvidado Contraseña?</span> 
-                    <a href="../web-pages/RecordarContraseña.html">Recordar Contraseña</a> 
-                </div>
-              <div class="text-center p-t-115"> 
-                  <span class="mr-2"> Aún no tiene registro realizado? </span> 
-                  <a href="../web-pages/registro.html">Regístrate </a> 
+      <section id="modificar" class="container">
+
+        <div class="card signup_v4 mb-30">
+          <div class="card-body">
+            <ul class="nav nav-tabs" id="myTab" role="tablist">
+              <li class="nav-item" role="presentation"> <a class="nav-link active" id="login-tab" data-toggle="tab" href="#login" role="tab"
+                  aria-controls="login" aria-selected="true" style="text-transform: uppercase;">Modifica tus datos</a> </li>
+            </ul>
+            <div class="tab-content" id="myTabContent">
+              <div class="tab-pane fade show active" id="login" role="tabpanel" aria-labelledby="login-tab">
+                <h4 class="text-center mt-4 mb-4" style="text-transform: uppercase;">Modificar datos</h4>
+                <form id="form">
+                  <div class="form-row">
+                    <div class="form-group col-md-12"> <label for="inputName">Nombre</label> <input type="text" class="form-control" name="nom" id="nom"
+                         required=""> </div>
+                    <div class="form-group col-md-12"> <label for="inputName">Primer apellido</label> <input type="text" class="form-control" name="cognom1"
+                        id="cognom1"  required=""> </div>
+                    <div class="form-group col-md-12"> <label for="inputName">Segundo apellido</label> <input type="text" class="form-control" name="cognom2"
+                        id="cognom2"  required=""> </div>
+                  </div>
+                  <div class="form-row">
+                    <div class="form-group col-md-12"> <label for="inputName">Correo electrónico</label> <input type="email" class="form-control" name="email"
+                        id="email"  required=""> </div>
+
+                    <div class="form-group col-md-12"> <label for="inputName">Teléfono de contacto</label> <input type="tel" class="form-control" name="telefon"
+                        id="telefon" minlength="9" maxlength="11" required>
+                    </div>
+
+                    <div class="form-group col-md-12"> <label for="inputName">Dirección</label> <input type="text" class="form-control" name="adreca"
+                        id="adreca"  required="" size="100"> </div>
+
+                    <div class="form-group col-md-12"> <label for="inputName">Código Postal</label> <input type="number" class="form-control" name="codpost"
+                        id="cp"  minlength="5" > </div>
+
+                    <div class="form-group col-md-12"> <label for="inputName">Población</label> <input type="text" class="form-control" name="poblacio"
+                        id="poblacio"  required=""> </div>
+
+                    <div class="form-group col-md-12"> <label for="inputName">Provincia</label> <input type="text" class="form-control" name="provincia"
+                        id="provincia"  required=""> </div>
+
+                    <div class="form-group col-md-12"> <label for="inputName">Contraseña Nueva</label> <span class="btn-show-pass"> <i
+                      class="bi bi-eye-fill"></i></span><input type="password" class="form-control" name="password"
+                        id="password" placeholder="Escriba su Contraseña"  
+                        title="Ha de tener uno o más números, una letra mayúscula, una letra minúscula y 8 o más caracteres."> </div>
+                  </div>
+                  <div class="form-row">
+                    <div class="form-group col-md-12"> <label for="inputName">Confirme la contraseña Nueva</label> <input type="password"
+                        class="form-control" name="password2" id="password2" placeholder="Escriba otra vez su contraseña" 
+                        title="Ha de tener uno o más números, una letra mayúscula, una letra minúscula y 8 o más caracteres."> </div>
+                  </div>
+                  
+                  <hr class="mt-3 mb-4">
+                  <div class="col-12">
+                    <div class="d-flex flex-wrap justify-content-between align-items-center">
+                        <div class="custom-checkbox d-block">  </div>
+                       <button class="btn btn-dark mt-3 mt-sm-0" type="submit">Modificar datos</button>
+                    </div>
+                  </div>
+                </form>
+
               </div>
-                <p class="formulari__mensaje-exito" id="formulari__mensaje-exito">formulari enviado exitosamente!</p>
-                <div class="formulari__mensaje" id="formulari__mensaje">
-                    <p><b>Error:</b> Por favor rellena el formulari correctamente. </p>
-                </div>
-              </form>
+              </div>
             </div>
           </div>
-        </div>
         </div>
       </section>
 
@@ -160,16 +189,14 @@
       crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-
     <!-- Custom scripts -->
     <script src="../js/login.js"></script>
 
-    <!-- Carregar CDN axios -->
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> 
-    <!-- Script de validació login.html -->
-     <script src="../../Front_Back/validar_login.js"></script>
+          <!-- Carregar CDN axios -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <!-- Script de validació ModificarUsuario.html -->
+    <script src="../../Front_Back/modificarUsuari.js"></script>
 
   </body>
 
 </html>
-
