--- a/Frontend/web-pages/buscar-rutina.html
+++ b/Frontend/web-pages/buscar-rutina.html
@@ -7,7 +7,7 @@
     <meta name="description" content="" />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    <link rel="stylesheet" href="http://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous" />
 
     <link rel="shortcut icon" href="../assets/favicon-32x32.png" type="image/x-icon" />
@@ -36,7 +36,7 @@
               <a class="nav-link mr-5 pr-5" href="../index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link mr-5" href="#">Programas</a>
+              <a class="nav-link mr-5" href="../web-pages/buscar-rutina.html">Programas</a>
             </li>
             <li class="nav-item">
               <a class="nav-link mr-5" href="#">Acerca de nosotros</a>
@@ -48,7 +48,7 @@
               <a class="nav-link mr-5 pr-5" href="#">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link mr-3" href="#">Iniciar Sesion</a>
+              <a class="nav-link mr-3" href="../web-pages/login.html">Iniciar Sesion</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../web-pages/registro.html">Regístrate</a>
@@ -59,45 +59,76 @@
     </header>
 
     <main>
-
-      <section id="iniciarSesion" class="container">
-        <div class="limit">
-          <div class="login-container">
-            <div class="bb-login">
-              <form class="bb-form validate-form" id="form"> <span class="bb-form-title p-b-26 mb-5"> Inicio de sesión </span><span class="bb-form-title p-b-4">
-                  <i class="mdi mdi-symfony"></i> </span>
-                <div class="form-group col-md-12 validate-input" data-validate="Valid email is: a@b.c> <label for=" inputName">Email</label> 
-                  <input type="email" class="form-control" id="email" name="email" placeholder="Inicie session con e-mail" required=""> 
-                  <p class="formulari__input-error">Ha de ser una combinació de lletres o nombres + l'arroba + més text en llebres o nombres + un punt + més text.</p>
-                </div>
-                <div class="form-group col-md-12"> <label for="inputName">Contraseña</label><span class="btn-show-pass"> <i
-                      class="bi bi-eye-fill"></i>
-                  </span> <input type="password" class="form-control" id="password" name="password" placeholder="Escriba su Contraseña" required
-                    pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
-                    title="Ha de tener uno o más números, una letra mayúscula, una letra minúscula y 8 o más caracteres."> 
-                    <p class="formulari__input-error">Contrasenya incorrecta.</p>
-                </div>
-                <div class="login-container-form-btn">
-                  <button class="btn btn-dark mt-5"> Iniciar sesión </button>
-                </div>
-                <div class="text-center p-t-115">
-                <div class="text-center p-t-115"> 
-                    <span class="mr-2">Olvidado Contraseña?</span> 
-                    <a href="../web-pages/RecordarContraseña.html">Recordar Contraseña</a> 
-                </div>
-              <div class="text-center p-t-115"> 
-                  <span class="mr-2"> Aún no tiene registro realizado? </span> 
-                  <a href="../web-pages/registro.html">Regístrate </a> 
-              </div>
-                <p class="formulari__mensaje-exito" id="formulari__mensaje-exito">formulari enviado exitosamente!</p>
-                <div class="formulari__mensaje" id="formulari__mensaje">
-                    <p><b>Error:</b> Por favor rellena el formulari correctamente. </p>
-                </div>
-              </form>
-            </div>
+      <section id="buscarRutina" class="container">
+        <h2 class="text-center font-weight-bolder mb-5 pb-3">Selecciona un programa</h2>
+        <div class="row ">
+          <div class="col-12 mb-5 col-md-6">
+            <label for="">Categoría</label>
+            <select class="form-control" id="categoria" name="categoria">
+              <option selected>Selecciona una categoria</option>
+            </select>
           </div>
+          <div class="col-12 mb-5 col-md-6">
+            <label for="">Autor</label>
+            <select class="form-control" id="entrenador" name="entrenador">
+              <option selected>Selecciona un entrenador</option>
+            </select>
+          </div>
+          <div class="col-12 mb-5 col-md-6">
+            <label for="">Equipamiento</label>
+            <select class="form-control" id="accessori" name="accessori">
+              <option selected>Selecciona el equipo que vayas a usar</option>
+            </select>
+          </div>
+          <div class="col-12 mb-5 col-md-6">
+            <label for="">Nivel</label>
+            <select class="form-control" id="nivell" name="nivell">
+              <option selected>Selecciona el nivel</option>
+              <option>Principiante</option>
+              <option>Intermedio</option>
+              <option>Avanzado</option>
+            </select>
+          </div>
+          <div class="col-12 mb-5 col-md-6">
+            <label for="">Duración</label>
+            <select class="form-control" id="duracio" name="duracio">
+              <option selected>Selecciona el tiempo de duración del programa(minutos)</option>
+              <option>15</option>
+              <option>25</option>
+              <option>30</option>
+              <option>45</option>
+              <option>60</option>
+            </select>
+          </div>
+
         </div>
+
+        <!-- Programas -->
+        <div class="rutinas-container">
+          <div class="mensaje-error">
+            <p id="missatgeError">Programa no encontrado con estos criterios de búsqueda</p>
+            <p id="ProgramesEscollits"></p>
+          </div>
+          <div class="rutinas-container__display">
+            <div class="row" id="items">
+            </div>
+            <!-- Presentacion de programas -->
+          </div>
+          <template id="template-card">
+            <div class="col-12 mb-2 col-md-4">
+              <div class="card">
+                <img src="#" alt="" class="card-img-top">
+                <div class="card-body">
+                  <h5>Rutina</h5>
+                  <p>Descripcio</p>
+                  <button class="btn btn-dark">Seleccionar</button>
+                </div>
+              </div>
+            </div>
+          </template>
         </div>
+        <!-- ./Programas -->
+
       </section>
 
     </main>
@@ -156,20 +187,22 @@
     <!-- ./Footer -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"></script>
+    <script
+    src="https://code.jquery.com/jquery-3.6.0.slim.js"
+    integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY="
+    crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-
-    <!-- Custom scripts -->
-    <script src="../js/login.js"></script>
+    
+    <!-- Custom scripts
+    <script src="../js/login.js"></script> -->
 
     <!-- Carregar CDN axios -->
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> 
-    <!-- Script de validació login.html -->
-     <script src="../../Front_Back/validar_login.js"></script>
+    <script src="../js/login.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <!-- Script de validació Buscar-rutina.html -->
+    <script src="../../Front_Back/seleccio_rutina.js"></script>
 
   </body>
 
 </html>
-
