--- a/Frontend/web-pages/crear-rutina.html
+++ b/Frontend/web-pages/crear-rutina.html
@@ -48,7 +48,7 @@
               <a class="nav-link mr-5 pr-5" href="#">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link mr-3" href="#">Iniciar Sesion</a>
+              <a class="nav-link mr-3" href="./web-pages/login.html">Iniciar Sesion</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../web-pages/registro.html">Regístrate</a>
@@ -60,44 +60,84 @@
 
     <main>
 
-      <section id="iniciarSesion" class="container">
-        <div class="limit">
-          <div class="login-container">
-            <div class="bb-login">
-              <form class="bb-form validate-form" id="form"> <span class="bb-form-title p-b-26 mb-5"> Inicio de sesión </span><span class="bb-form-title p-b-4">
-                  <i class="mdi mdi-symfony"></i> </span>
-                <div class="form-group col-md-12 validate-input" data-validate="Valid email is: a@b.c> <label for=" inputName">Email</label> 
-                  <input type="email" class="form-control" id="email" name="email" placeholder="Inicie session con e-mail" required=""> 
-                  <p class="formulari__input-error">Ha de ser una combinació de lletres o nombres + l'arroba + més text en llebres o nombres + un punt + més text.</p>
-                </div>
-                <div class="form-group col-md-12"> <label for="inputName">Contraseña</label><span class="btn-show-pass"> <i
-                      class="bi bi-eye-fill"></i>
-                  </span> <input type="password" class="form-control" id="password" name="password" placeholder="Escriba su Contraseña" required
-                    pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
-                    title="Ha de tener uno o más números, una letra mayúscula, una letra minúscula y 8 o más caracteres."> 
-                    <p class="formulari__input-error">Contrasenya incorrecta.</p>
-                </div>
-                <div class="login-container-form-btn">
-                  <button class="btn btn-dark mt-5"> Iniciar sesión </button>
-                </div>
-                <div class="text-center p-t-115">
-                <div class="text-center p-t-115"> 
-                    <span class="mr-2">Olvidado Contraseña?</span> 
-                    <a href="../web-pages/RecordarContraseña.html">Recordar Contraseña</a> 
-                </div>
-              <div class="text-center p-t-115"> 
-                  <span class="mr-2"> Aún no tiene registro realizado? </span> 
-                  <a href="../web-pages/registro.html">Regístrate </a> 
-              </div>
-                <p class="formulari__mensaje-exito" id="formulari__mensaje-exito">formulari enviado exitosamente!</p>
-                <div class="formulari__mensaje" id="formulari__mensaje">
-                    <p><b>Error:</b> Por favor rellena el formulari correctamente. </p>
-                </div>
-              </form>
+      <section id="crear-rutina" class="container">
+        <h2 class="text-center font-weight-bolder mb-5 pb-3">Crear una Rutina</h2>
+        <form id="form">
+          <div class="row ">
+            <div class="col-12 mb-5 col-md-6">
+              <label for="">Categoría</label>
+              <select class="form-control" id="categoria">
+                <option selected>Escoge una categoria</option>
+              </select>
+            </div>
+            <div class="form-group col-12 col-md-4 offset-2">
+              <label for="exampleFormControlFile1">Agrega un vídeo</label>
+              <input type="file" class="form-control-file" id="video">
             </div>
           </div>
-        </div>
-        </div>
+
+          <div class="row">
+            <div class="col-12 mb-5 col-md-6">
+              <label for="">Equipamiento</label>
+              <select class="form-control" id="accessori">
+                <option selected>Escoge el equipo que vayas a usar</option>
+              </select>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-12 mb-5 col-md-6">
+              <label for="">Nivel</label>
+              <select class="form-control" id="nivell">
+                <option selected>Selecciona el nivel</option>
+                <option>Principiante</option>
+                <option>Intermedio</option>
+                <option>Avanzado</option>
+              </select>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-12 mb-5 col-md-6">
+              <label for="">Duración</label>
+              <select class="form-control" id="duracio">
+                <option selected>Selecciona el tiempo de duración del programa(minutos)</option>
+                <option>15</option>
+                <option>25</option>
+                <option>30</option>
+                <option>45</option>
+                <option>60</option>
+              </select>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-12 mb-5 col-md-6">
+              <label for="">Preu</label>
+                  <select class="form-control" id="preu">
+                    <option selected>Selecciona el precio para la rutina</option>
+                    <option>20</option>
+                    <option>30</option>
+                    <option>40</option>
+                    <option>50</option>
+                    <option>60</option>
+                    <option>70</option>
+              </select>
+            </div>
+          </div>
+
+          <div class="row mb-5">
+            <div class="col-12 col-md-8">
+              <label for="exampleFormControlTextarea1">Escribe una descripción de la rutina</label>
+              <textarea class="form-control col-12" id="descripcio" rows="3" placeholder="Escribe aquí la descripción"></textarea>
+            </div>
+            <div class="col-12 col-md-4">
+              <label for="exampleFormControlFile1">Adjuntar imagen</label>
+              <input type="file" class="form-control-file" id="imatge">
+            </div>
+          </div>
+          <button type="submit" id="boton" class="btn btn-dark btn-lg btn-block">Guardar Rutina</button>
+      </form>
       </section>
 
     </main>
@@ -165,11 +205,10 @@
     <script src="../js/login.js"></script>
 
     <!-- Carregar CDN axios -->
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> 
-    <!-- Script de validació login.html -->
-     <script src="../../Front_Back/validar_login.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <!-- Script de validació registro.html -->
+    <script src="../../Front_Back/crear-rutina.js"></script>
 
   </body>
 
 </html>
-
