--- a/Frontend/web-pages/entrenador.html
+++ b/Frontend/web-pages/entrenador.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+<!--
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+-->
+<!DOCTYPE html>
 <html lang="es">
 
   <head>
@@ -19,7 +25,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css" />
 
-    <link href="../css/login.css" rel="stylesheet" />
+    <link href="../css/usuario.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -48,10 +54,10 @@
               <a class="nav-link mr-5 pr-5" href="#">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link mr-3" href="#">Iniciar Sesion</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../web-pages/registro.html">Regístrate</a>
+                <a class="nav-link" href="#">Contenido</a>
+               <ul>
+                <li><a href="../web-pages/crear-rutina.html">Crear Rutina</a></li>
+               </ul> 
             </li>
           </ul>
         </div>
@@ -60,44 +66,7 @@
 
     <main>
 
-      <section id="iniciarSesion" class="container">
-        <div class="limit">
-          <div class="login-container">
-            <div class="bb-login">
-              <form class="bb-form validate-form" id="form"> <span class="bb-form-title p-b-26 mb-5"> Inicio de sesión </span><span class="bb-form-title p-b-4">
-                  <i class="mdi mdi-symfony"></i> </span>
-                <div class="form-group col-md-12 validate-input" data-validate="Valid email is: a@b.c> <label for=" inputName">Email</label> 
-                  <input type="email" class="form-control" id="email" name="email" placeholder="Inicie session con e-mail" required=""> 
-                  <p class="formulari__input-error">Ha de ser una combinació de lletres o nombres + l'arroba + més text en llebres o nombres + un punt + més text.</p>
-                </div>
-                <div class="form-group col-md-12"> <label for="inputName">Contraseña</label><span class="btn-show-pass"> <i
-                      class="bi bi-eye-fill"></i>
-                  </span> <input type="password" class="form-control" id="password" name="password" placeholder="Escriba su Contraseña" required
-                    pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
-                    title="Ha de tener uno o más números, una letra mayúscula, una letra minúscula y 8 o más caracteres."> 
-                    <p class="formulari__input-error">Contrasenya incorrecta.</p>
-                </div>
-                <div class="login-container-form-btn">
-                  <button class="btn btn-dark mt-5"> Iniciar sesión </button>
-                </div>
-                <div class="text-center p-t-115">
-                <div class="text-center p-t-115"> 
-                    <span class="mr-2">Olvidado Contraseña?</span> 
-                    <a href="../web-pages/RecordarContraseña.html">Recordar Contraseña</a> 
-                </div>
-              <div class="text-center p-t-115"> 
-                  <span class="mr-2"> Aún no tiene registro realizado? </span> 
-                  <a href="../web-pages/registro.html">Regístrate </a> 
-              </div>
-                <p class="formulari__mensaje-exito" id="formulari__mensaje-exito">formulari enviado exitosamente!</p>
-                <div class="formulari__mensaje" id="formulari__mensaje">
-                    <p><b>Error:</b> Por favor rellena el formulari correctamente. </p>
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-        </div>
+      
       </section>
 
     </main>
@@ -164,12 +133,6 @@
     <!-- Custom scripts -->
     <script src="../js/login.js"></script>
 
-    <!-- Carregar CDN axios -->
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> 
-    <!-- Script de validació login.html -->
-     <script src="../../Front_Back/validar_login.js"></script>
-
   </body>
 
 </html>
-
