--- a/Frontend/web-pages/registro.html
+++ b/Frontend/web-pages/registro.html
@@ -113,7 +113,8 @@
                   <div class="form-row">
                     <div class="form-group col-md-12"> <label for="inputName">Confirme la contraseña</label> <input type="password"
                         class="form-control" id="inputPassword4" placeholder="Escriba otra vez su contraseña" required
-                        pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+                        pattern="(?=.*\
+                        d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
                         title="Ha de tener uno o más números, una letra mayúscula, una letra minúscula y 8 o más caracteres."> </div>
                   </div>
                   <div class="form-group form-row mb-5 mt-5">
@@ -166,7 +167,7 @@
                       </div>
                       <div class="form-group col-md-12"> 
                         <label for="telefon">Teléfono de contacto</label> 
-                        <input type="tel" class="form-control" id="telefon" name="telefon" placeholder="777-777-777" pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}" minlength="7" maxlength="11" required>
+                        <input type="tel" class="form-control" id="telefon" name="telefon" placeholder="777-777-777" minlength="9" maxlength="11" required>
                         <p class="formulari__input-error">Ha de contenir 9 nombres separats de 3 en 3 per un guió.</p>
                       </div>
                       <div class="form-group col-md-12"> 
@@ -219,8 +220,8 @@
                     <div class="form-group form-row mb-5 mt-5">
                         <div class="col-md-12"> 
                           <label class="custom-control custom-checkbox checkbox-lg"> 
-                            <input type="checkbox" class="custom-control-input" id="isentrenador">
-                            <div class="custom-control-label" for="isentrenador">Es entrenador?</div>
+                            <input type="checkbox" class="custom-control-input" id="isEntrenador">
+                            <div class="custom-control-label" for="isEntrenador">Es entrenador?</div>
                           </label> 
                         </div>
                       </div>
@@ -304,8 +305,10 @@
       crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <!-- <script src="../../Front_Back/llamadas.js"></script> -->
+    
+    <!-- Carregar CDN axios -->
+      <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <!-- Script de validació registro.html -->
     <script src="../../Front_Back/validar_formulari.js"></script>
     
 
